# sqlcompare

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  examples.yml  tests.yml
examples/: row_compare.md  row_compare_missing.md  stats_compare.md  stats_compare_tables.md
scripts/generate_examples/: examples.yml  run.py
skills/sqlcompare-connection-debug/: SKILL.md
skills/sqlcompare-connection-debug/scripts/: parse_sqlalchemy_url.py
skills/sqlcompare-core-run/: SKILL.md
skills/sqlcompare-output-analysis/: SKILL.md
sqlcompare/: __init__.py  analyze_diff.py  cli.py  config.py  dataset.py  diff_queries.py  helpers.py  history.py  inspect.py  list_diffs.py  log.py  meta.py  query.py  review.py  review_cmds.py  run.py  run_auto.py  run_cmd.py  run_dataset.py  run_stats.py  run_table.py  stats.py  table.py  test.py
sqlcompare/analysis/: utils.py
sqlcompare/compare/: __init__.py  analyze.py  comparator.py  listing.py  materialize.py  table.py
sqlcompare/db/: connection.py  constants.py  engine.py  exceptions.py  resolver.py
sqlcompare/stats/: __init__.py  checks.py  models.py  report.py  runner.py
sqlcompare/utils/: column_transformations.py  concurrency.py  file_readers.py  format.py
sqlcompare/utils/test_types/: row.py  stats.py
tests/: cli_helpers.py  test_cli.py  test_cli_analyze.py  test_cli_dataset.py  test_cli_dataset_options.py  test_cli_diff_queries.py  test_cli_list_diffs.py  test_cli_query.py  test_cli_run.py  test_cli_table.py  test_csv_compare.py  test_datasets.py  test_db_connection.py  test_db_connection_sqlite.py  test_db_new.py  test_db_resolver.py  test_file_readers_csv.py  test_stats_comparison.py
tests/datasets/csv_compare/: current.csv  previous.csv
tests/datasets/csv_test/: current.csv  previous.csv  test.yaml
tests/datasets/duckdb_test/: test.yaml
tests/datasets/row_compare/: current.csv  previous.csv
tests/datasets/stats_compare/: current.csv  previous.csv  setup.sql
tests/datasets/xlsx_test/: current.xlsx  previous.xlsx  test.yaml
